cmake_minimum_required( VERSION 3.0 )

project( game LANGUAGES CXX )

set(HEADERS
		sources/contexts/options/graphics/graphicsMenuData.h
		sources/contexts/options/graphics/graphicsOptionsConsts.h
		sources/contexts/options/graphics/graphicsContext.h
		sources/contexts/options/mainMenuData.h
		sources/contexts/options/joystickInterface/joystickInfosInterface.h
		sources/contexts/options/joystickInterface/joystickGraphicsValues.h
		sources/contexts/options/mainMenuConsts.h
		sources/contexts/options/audio/volumeBar.h
		sources/contexts/options/audio/audioPanel.h
		sources/contexts/options/audio/soundConfig.h
		sources/contexts/options/audio/audioContext.h
		sources/contexts/options/audio/musicConfig.h
		sources/contexts/options/optionsContext.h
		sources/contexts/options/optionsLanguageConsts.h
		sources/contexts/options/languages/languageContext.h
		sources/contexts/options/languages/languagesMenuGraphics.h
		sources/contexts/gameStarting/startMiniScreen/startMiniScreenContext.h
		sources/contexts/gameStarting/sdlLogoDisplay/sdlVersionDisplay.h
		sources/contexts/gameStarting/sdlLogoDisplay/logoDispContext.h
		sources/contexts/gameStarting/initWindowAndRenderer/initWindowRenderer.h
		sources/contexts/gameStarting/initPrefPath/initPrefPath.h
		sources/contexts/gameStarting/mainMenu/mainMenu.h
		sources/contexts/gameStarting/mainMenu/mainMenuWidgets.h
		sources/contexts/gameStarting/setupFiles/setupLanguageFile.h
		sources/contexts/gameStarting/setupFiles/setupConfigFiles.h
		sources/contexts/gameStarting/setupFiles/createConfigFiles.h
		sources/contexts/gameStarting/initSDL2/sdl2_initialization.h
		sources/contexts/duels/instructions/elementsCollisions.h
		sources/contexts/duels/instructions/activateBonuses.h
		sources/contexts/duels/instructions/positionCheck.h
		sources/contexts/duels/instructions/objMoveWRectCollide.h
		sources/contexts/duels/duelsConstexpr.h
		sources/contexts/duels/setFinalAchievement/context.h
		sources/contexts/duels/setFinalAchievement/contextWidgets.h
		sources/contexts/duels/matchConfig/context.h
		sources/contexts/duels/matchConfig/graphics/zoneChoiceGraphics.h
		sources/contexts/duels/matchConfig/graphics/zonesPanels.h
		sources/contexts/duels/matchConfig/graphics/bonusVignettes.h
		sources/contexts/duels/matchConfig/graphics/spinAnimation.h
		sources/contexts/duels/matchConfig/bonusesSlots/bonusInterface.h
		sources/contexts/duels/matchConfig/bonusesSlots/bonusSlot.h
		sources/contexts/duels/matchConfig/bonusesSlots/slotsData.h
		sources/contexts/duels/matchConfig/bonusesSlots/bonusesSlotsContext.h
		sources/contexts/duels/matchConfig/bonusesSlots/slotsConsts.h
		sources/contexts/duels/matchConfig/zoneSpecificOptions/halloween/elements.h
		sources/contexts/duels/matchConfig/zoneSpecificOptions/halloween/halloweenSpecific.h
		sources/contexts/duels/matchConfig/zoneSpecificOptions/halloween/languageTexts.h
		sources/contexts/duels/matchConfig/textFilesLoading/fromStringsToTextures.h
		sources/contexts/duels/matchConfig/interface/helpTexts.h
		sources/contexts/duels/matchConfig/interface/zoneChoiceThings.h
		sources/contexts/duels/matchConfig/interface/bonusEditBoxes.h
		sources/contexts/duels/matchConfig/interface/othersOptions.h
		sources/contexts/duels/matchConfig/zoneChoice/context.h
		sources/contexts/duels/matchConfig/zoneChoice/zonesPanels.h
		sources/contexts/duels/inGameObjects/playerInputs/loadInputConfig.h
		sources/contexts/duels/inGameObjects/playerInputs/inputsTypes.h
		sources/contexts/duels/inGameObjects/playerInputs/inputsConsts.h
		sources/contexts/duels/inGameObjects/playerInputs/playersInputs.h
		sources/contexts/duels/inGameObjects/gameElements/spawnsData.h
		sources/contexts/duels/inGameObjects/gameElements/collisionsInfos.h
		sources/contexts/duels/inGameObjects/gameElements/duelsTypes.h
		sources/contexts/duels/inGameObjects/gameElements/collisionBools.h
		sources/contexts/duels/inGameObjects/rackets/racket.h
		sources/contexts/duels/inGameObjects/global/playersThings.h
		sources/contexts/duels/inGameObjects/global/duelsGlobalObject.h
		sources/contexts/duels/inGameObjects/bonusCoins/coinsMain.h
		sources/contexts/duels/inGameObjects/bonusCoins/bonusCoin.h
		sources/contexts/duels/inGameObjects/balls/ballsMain.h
		sources/contexts/duels/inGameObjects/balls/duelBall.h
		sources/contexts/duels/inGameObjects/bonus/bonusPicker.h
		sources/contexts/duels/inGameObjects/bonus/bonusDrawer.h
		sources/contexts/duels/inGameObjects/bonus/bonusGenerator.h
		sources/contexts/duels/inGameObjects/bonus/bonusStateMachine.h
		sources/contexts/duels/inGameObjects/playerScore/playerScoreDrawing.h
		sources/contexts/duels/championshipEnd/champEndContext.h
		sources/contexts/duels/championshipEnd/matchEndInterface.h
		sources/contexts/duels/championshipEnd/graphicInterface.h
		sources/contexts/duels/zones/allZonesConfig.h
		sources/contexts/duels/zones/halloween/halloweenContext.h
		sources/contexts/duels/zones/halloween/subObjects/potBubbles/bubblesDrawer.h
		sources/contexts/duels/zones/halloween/subObjects/halloweenArea.h
		sources/contexts/duels/zones/halloween/subObjects/pumpkins/playersSpecialPumpkins.h
		sources/contexts/duels/zones/halloween/subObjects/pumpkins/pumpkinFactory.h
		sources/contexts/duels/zones/halloween/subObjects/pumpkins/collisionsWithPlayerRacket.h
		sources/contexts/duels/zones/halloween/subObjects/halloweenConfig.h
		sources/contexts/duels/zones/halloween/subObjects/halloweenGlobalObject.h
		sources/contexts/duels/zones/halloween/subObjects/halloweenFactory.h
		sources/contexts/duels/zones/simpleZone/context.h
		sources/contexts/duels/zones/simpleZone/simpleZoneArea.h
		sources/contexts/duels/zones/metalStrings/context.h
		sources/contexts/duels/zones/metalStrings/subObjects/barriersData.h
		sources/contexts/duels/zones/metalStrings/subObjects/metalStringsConfig.h
		sources/contexts/duels/zones/metalStrings/subObjects/switchsData.h
		sources/contexts/duels/zones/metalStrings/subObjects/stringDrawer.h
		sources/contexts/duels/zones/metalStrings/subObjects/notStringsElements.h
		sources/contexts/duels/zones/metalStrings/subObjects/steamPipe.h
		sources/contexts/duels/zones/metalStrings/subObjects/globalSpecificObject.h
		sources/contexts/duels/zones/metalStrings/subObjects/consts.h
		sources/contexts/duels/zones/metalStrings/subObjects/metalStringsData.h
		sources/contexts/duels/zones/metalStrings/subObjects/verticalBarriersDrawing.h
		sources/contexts/duels/controls/makeInpStringFromData.h
		sources/contexts/duels/controls/objects/screenGraphics.h
		sources/contexts/duels/controls/objects/mainObject.h
		sources/contexts/duels/controls/objects/joystickInfosGraphics.h
		sources/contexts/duels/controls/objects/playerDataGraphics.h
		sources/contexts/duels/controls/objects/joysticksInfosDrawer.h
		sources/contexts/duels/controls/inputConfigContext.h
		sources/contexts/duels/controls/inputScreenConsts.h
		sources/contexts/credits/creditsContext.h
		sources/contexts/credits/creditsMenuData.h
		sources/contexts/gameCommon/hellSkulls/skullDrawer.h
		sources/contexts/gameCommon/hellSkulls/skullData.h
		sources/contexts/gameCommon/hellSkulls/skullConsts.h
		sources/contexts/gameCommon/rackets/racketData.h
		sources/contexts/gameCommon/rackets/racketDrawer.h
		sources/contexts/gameCommon/time/intervalAndRandomTimeHappening.h
		sources/contexts/gameCommon/steamData/steamSample.h
		sources/contexts/gameCommon/fireBall/fireBallConsts.h
		sources/contexts/gameCommon/fireBall/fireBallDrawer.h
		sources/contexts/gameCommon/fireBall/fireBallDrawData.h
		sources/contexts/gameCommon/stalactites/racketFreezesDurationsLoader.h
		sources/contexts/gameCommon/stalactites/stalactitesConsts.h
		sources/contexts/gameCommon/stalactites/stalactitesDrawer.h
		sources/contexts/gameCommon/stalactites/onePlayerStalactiteData.h
		sources/contexts/gameCommon/stalactites/stalactitesData.h
		sources/contexts/gameCommon/pinguins/pinguinConsts.h
		sources/contexts/gameCommon/pinguins/pinguinDrawData.h
		sources/contexts/gameCommon/pinguins/pinguinBehaviorData.h
		sources/contexts/gameCommon/cheating/checkCheatingFile.h
		sources/contexts/gameCommon/rectCollisions/processBouncing.h
		sources/contexts/gameCommon/rectCollisions/monsterCollisionsWithRect.h
		sources/contexts/gameCommon/rectCollisions/objMoveWithRectCollisions.h
		sources/contexts/gameCommon/rectCollisions/rectLoader.h
		sources/contexts/gameCommon/rectCollisions/brickGridCollisions.h
		sources/contexts/gameCommon/pathsAndRects/pathZoneRects.h
		sources/contexts/gameCommon/pathsAndRects/pathNodes.h
		sources/contexts/gameCommon/halloween/pumpkins/pumpkinDrawer.h
		sources/contexts/gameCommon/halloween/pumpkins/pumpkinConsts.h
		sources/contexts/gameCommon/halloween/pumpkins/pumpkinCombo.h
		sources/contexts/gameCommon/halloween/bat/batConsts.h
		sources/contexts/gameCommon/halloween/bat/badBatDrawer.h
		sources/contexts/gameCommon/halloween/bat/batFactory.h
		sources/contexts/gameCommon/halloween/bat/badBatData.h
		sources/contexts/gameCommon/explosions/allExplosions.h
		sources/contexts/gameCommon/explosions/entityExplosion.h
		sources/contexts/gameCommon/explosions/explosionLoader.h
		sources/contexts/onePlayerGame/inGameMainMenu/race/graphicalInterface.h
		sources/contexts/onePlayerGame/inGameMainMenu/race/context.h
		sources/contexts/onePlayerGame/inGameMainMenu/campaignChoice/graphicalInterface.h
		sources/contexts/onePlayerGame/inGameMainMenu/campaignChoice/context.h
		sources/contexts/onePlayerGame/inGameMainMenu/campaignChoice/consts.h
		sources/contexts/onePlayerGame/inGameMainMenu/campaignChoice/raceLevelsCount.h
		sources/contexts/onePlayerGame/campaignEnd/campaignEndContext.h
		sources/contexts/onePlayerGame/campaignEnd/campEndInterface.h
		sources/contexts/onePlayerGame/bestScoresMenu/mainInterface.h
		sources/contexts/onePlayerGame/bestScoresMenu/bestScoresData.h
		sources/contexts/onePlayerGame/bestScoresMenu/bestScoresContext.h
		sources/contexts/onePlayerGame/levelEnd/levelEndContext.h
		sources/contexts/onePlayerGame/levelEnd/completeLevelInterface.h
		sources/contexts/onePlayerGame/gamePaused/gameInPause.h
		sources/contexts/onePlayerGame/gamePaused/gamePausedGUI.h
		sources/contexts/onePlayerGame/seeNextLevel/context.h
		sources/contexts/onePlayerGame/levelComponents/traceCross/traceCross.h
		sources/contexts/onePlayerGame/levelComponents/global/monstersTriggers.h
		sources/contexts/onePlayerGame/levelComponents/global/globalGameObject.h
		sources/contexts/onePlayerGame/levelComponents/bonusCoins/coinSample.h
		sources/contexts/onePlayerGame/levelComponents/freeFunctions/ballWithGridCollisions.h
		sources/contexts/onePlayerGame/levelComponents/freeFunctions/testBallPositionWithGrid.h
		sources/contexts/onePlayerGame/levelComponents/freeFunctions/withSkullBrickBallCollision.h
		sources/contexts/onePlayerGame/levelComponents/freeFunctions/detectLevelEnd.h
		sources/contexts/onePlayerGame/levelComponents/freeFunctions/ballWithPinguinBrickCollisions.h
		sources/contexts/onePlayerGame/levelComponents/fallingBonuses/fallingBonuses.h
		sources/contexts/onePlayerGame/levelComponents/onePlayerRacket/onePlayerRacket.h
		sources/contexts/onePlayerGame/levelComponents/antarcticEpisodeThings/antarcticPackage.h
		sources/contexts/onePlayerGame/levelComponents/antarcticEpisodeThings/stalactites/iceStalactites.h
		sources/contexts/onePlayerGame/levelComponents/antarcticEpisodeThings/onePlayerPinguins/onePlayerPinguin.h
		sources/contexts/onePlayerGame/levelComponents/rims/playerRims.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/hellSkullGlobal.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/inGame/hellSkullElement.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/inGame/hellSkullPack.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/inGame/hellSkullActivity.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/configuration/skullFileData.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/configuration/hellSkullDataLoader.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/paths/fireBallPaths.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/fireBallGlobal.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/inGame/bottomScreenFireBallsPack.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/inGame/fireBallElement.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/configuration/fireBallDataLoader.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/configuration/fireBallFileData.h
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellPackage.h
		sources/contexts/onePlayerGame/levelComponents/infoBar/infoBar.h
		sources/contexts/onePlayerGame/levelComponents/balls/ballsThings.h
		sources/contexts/onePlayerGame/levelComponents/balls/ballSpeedsOptions.h
		sources/contexts/onePlayerGame/levelComponents/inGameBagThings/bonusesCountGraphics.h
		sources/contexts/onePlayerGame/levelComponents/inGameBagThings/iconsPositionsLoader.h
		sources/contexts/onePlayerGame/levelComponents/inGameBagThings/bagObject.h
		sources/contexts/onePlayerGame/levelComponents/inGameBagThings/bagViewContext.h
		sources/contexts/onePlayerGame/levelComponents/inputs/userInputs.h
		sources/contexts/onePlayerGame/levelComponents/inputs/customInputsData.h
		sources/contexts/onePlayerGame/levelComponents/inputs/joystickInputData.h
		sources/contexts/onePlayerGame/newGame/newGameInterface.h
		sources/contexts/onePlayerGame/newGame/newGameContext.h
		sources/contexts/onePlayerGame/inputConfig/context.h
		sources/contexts/onePlayerGame/inputConfig/staticGraphics.h
		sources/contexts/onePlayerGame/inputConfig/inputThings.h
		sources/contexts/onePlayerGame/saveAndLoad/common/slotGraphics.h
		sources/contexts/onePlayerGame/saveAndLoad/common/slotsUserInterface.h
		sources/contexts/onePlayerGame/saveAndLoad/gameSaving/saveGameContext.h
		sources/contexts/onePlayerGame/saveAndLoad/gameLoading/gameLoadContext.h
		sources/contexts/onePlayerGame/skillLevelChoice/graphicalInterface.h
		sources/contexts/onePlayerGame/skillLevelChoice/context.h
		sources/contexts/onePlayerGame/levelsContexts/stdLevelContext.h
		sources/contexts/onePlayerGame/levelsContexts/antarcticContext.h
		sources/contexts/onePlayerGame/levelsContexts/hellContext.h
		sources/contexts/onePlayerGame/bonusesShop/shopInterface.h
		sources/contexts/onePlayerGame/bonusesShop/shopContext.h
)

set(SOURCES
		sources/main.cpp
		sources/contexts/options/optionsContext.cpp
		sources/contexts/options/graphics/graphicsContext.cpp
		sources/contexts/options/graphics/graphicsMenuData.cpp
		sources/contexts/options/joystickInterface/joystickInfosInterface.cpp
		sources/contexts/options/joystickInterface/joystickGraphicsValues.cpp
		sources/contexts/options/audio/volumeBar.cpp
		sources/contexts/options/audio/audioPanel.cpp
		sources/contexts/options/audio/musicConfig.cpp
		sources/contexts/options/audio/soundConfig.cpp
		sources/contexts/options/audio/audioContext.cpp
		sources/contexts/options/mainMenuData.cpp
		sources/contexts/options/languages/languageContext.cpp
		sources/contexts/options/languages/languagesMenuGraphics.cpp
		sources/contexts/gameStarting/startMiniScreen/startMiniScreenContext.cpp
		sources/contexts/gameStarting/sdlLogoDisplay/sdlVersionDisplay.cpp
		sources/contexts/gameStarting/sdlLogoDisplay/logoDispContext.cpp
		sources/contexts/gameStarting/initWindowAndRenderer/initWindowRenderer.cpp
		sources/contexts/gameStarting/initPrefPath/initPrefPath.cpp
		sources/contexts/gameStarting/mainMenu/mainMenu.cpp
		sources/contexts/gameStarting/mainMenu/mainMenuWidgets.cpp
		sources/contexts/gameStarting/setupFiles/setupConfigFiles.cpp
		sources/contexts/gameStarting/setupFiles/createConfigFiles.cpp
		sources/contexts/gameStarting/setupFiles/setupLanguageFile.cpp
		sources/contexts/gameStarting/initSDL2/sdl2_initialization.cpp
		sources/contexts/duels/instructions/objMoveWRectCollide.cpp
		sources/contexts/duels/instructions/elementsCollisions.cpp
		sources/contexts/duels/instructions/positionCheck.cpp
		sources/contexts/duels/instructions/activateBonuses.cpp
		sources/contexts/duels/setFinalAchievement/context.cpp
		sources/contexts/duels/setFinalAchievement/contextWidgets.cpp
		sources/contexts/duels/matchConfig/context.cpp
		sources/contexts/duels/matchConfig/graphics/zonesPanels.cpp
		sources/contexts/duels/matchConfig/graphics/spinAnimation.cpp
		sources/contexts/duels/matchConfig/graphics/bonusVignettes.cpp
		sources/contexts/duels/matchConfig/graphics/zoneChoiceGraphics.cpp
		sources/contexts/duels/matchConfig/bonusesSlots/bonusSlot.cpp
		sources/contexts/duels/matchConfig/bonusesSlots/bonusesSlotsContext.cpp
		sources/contexts/duels/matchConfig/bonusesSlots/slotsData.cpp
		sources/contexts/duels/matchConfig/bonusesSlots/bonusInterface.cpp
		sources/contexts/duels/matchConfig/zoneSpecificOptions/halloween/elements.cpp
		sources/contexts/duels/matchConfig/zoneSpecificOptions/halloween/halloweenSpecific.cpp
		sources/contexts/duels/matchConfig/textFilesLoading/fromStringsToTextures.cpp
		sources/contexts/duels/matchConfig/interface/othersOptions.cpp
		sources/contexts/duels/matchConfig/interface/helpTexts.cpp
		sources/contexts/duels/matchConfig/interface/zoneChoiceThings.cpp
		sources/contexts/duels/matchConfig/interface/bonusEditBoxes.cpp
		sources/contexts/duels/matchConfig/zoneChoice/context.cpp
		sources/contexts/duels/matchConfig/zoneChoice/zonesPanels.cpp
		sources/contexts/duels/inGameObjects/playerInputs/loadInputConfig.cpp
		sources/contexts/duels/inGameObjects/playerInputs/playersInputs.cpp
		sources/contexts/duels/inGameObjects/playerInputs/inputsTypes.cpp
		sources/contexts/duels/inGameObjects/gameElements/duelsTypes.cpp
		sources/contexts/duels/inGameObjects/gameElements/spawnsData.cpp
		sources/contexts/duels/inGameObjects/gameElements/collisionBools.cpp
		sources/contexts/duels/inGameObjects/gameElements/collisionsInfos.cpp
		sources/contexts/duels/inGameObjects/rackets/racket.cpp
		sources/contexts/duels/inGameObjects/global/playersThings.cpp
		sources/contexts/duels/inGameObjects/global/duelsGlobalObject.cpp
		sources/contexts/duels/inGameObjects/bonusCoins/bonusCoin.cpp
		sources/contexts/duels/inGameObjects/bonusCoins/coinsMain.cpp
		sources/contexts/duels/inGameObjects/balls/duelBall.cpp
		sources/contexts/duels/inGameObjects/balls/ballsMain.cpp
		sources/contexts/duels/inGameObjects/bonus/bonusDrawer.cpp
		sources/contexts/duels/inGameObjects/bonus/bonusPicker.cpp
		sources/contexts/duels/inGameObjects/bonus/bonusGenerator.cpp
		sources/contexts/duels/inGameObjects/bonus/bonusStateMachine.cpp
		sources/contexts/duels/inGameObjects/playerScore/playerScoreDrawing.cpp
		sources/contexts/duels/championshipEnd/champEndContext.cpp
		sources/contexts/duels/championshipEnd/graphicInterface.cpp
		sources/contexts/duels/championshipEnd/matchEndInterface.cpp
		sources/contexts/duels/zones/allZonesConfig.cpp
		sources/contexts/duels/zones/halloween/halloweenContext.cpp
		sources/contexts/duels/zones/halloween/subObjects/potBubbles/bubblesDrawer.cpp
		sources/contexts/duels/zones/halloween/subObjects/halloweenGlobalObject.cpp
		sources/contexts/duels/zones/halloween/subObjects/halloweenConfig.cpp
		sources/contexts/duels/zones/halloween/subObjects/pumpkins/collisionsWithPlayerRacket.cpp
		sources/contexts/duels/zones/halloween/subObjects/pumpkins/playersSpecialPumpkins.cpp
		sources/contexts/duels/zones/halloween/subObjects/pumpkins/pumpkinFactory.cpp
		sources/contexts/duels/zones/halloween/subObjects/halloweenArea.cpp
		sources/contexts/duels/zones/halloween/subObjects/halloweenFactory.cpp
		sources/contexts/duels/zones/simpleZone/context.cpp
		sources/contexts/duels/zones/simpleZone/simpleZoneArea.cpp
		sources/contexts/duels/zones/metalStrings/context.cpp
		sources/contexts/duels/zones/metalStrings/subObjects/barriersData.cpp
		sources/contexts/duels/zones/metalStrings/subObjects/steamPipe.cpp
		sources/contexts/duels/zones/metalStrings/subObjects/verticalBarriersDrawing.cpp
		sources/contexts/duels/zones/metalStrings/subObjects/switchsData.cpp
		sources/contexts/duels/zones/metalStrings/subObjects/stringDrawer.cpp
		sources/contexts/duels/zones/metalStrings/subObjects/metalStringsData.cpp
		sources/contexts/duels/zones/metalStrings/subObjects/metalStringsConfig.cpp
		sources/contexts/duels/zones/metalStrings/subObjects/globalSpecificObject.cpp
		sources/contexts/duels/zones/metalStrings/subObjects/notStringsElements.cpp
		sources/contexts/duels/controls/objects/joysticksInfosDrawer.cpp
		sources/contexts/duels/controls/objects/joystickInfosGraphics.cpp
		sources/contexts/duels/controls/objects/playerDataGraphics.cpp
		sources/contexts/duels/controls/objects/mainObject.cpp
		sources/contexts/duels/controls/objects/screenGraphics.cpp
		sources/contexts/duels/controls/makeInpStringFromData.cpp
		sources/contexts/duels/controls/inputConfigContext.cpp
		sources/contexts/credits/creditsContext.cpp
		sources/contexts/credits/creditsMenuData.cpp
		sources/contexts/gameCommon/hellSkulls/skullData.cpp
		sources/contexts/gameCommon/hellSkulls/skullDrawer.cpp
		sources/contexts/gameCommon/rackets/racketDrawer.cpp
		sources/contexts/gameCommon/rackets/racketData.cpp
		sources/contexts/gameCommon/time/intervalAndRandomTimeHappening.cpp
		sources/contexts/gameCommon/steamData/steamSample.cpp
		sources/contexts/gameCommon/fireBall/fireBallDrawData.cpp
		sources/contexts/gameCommon/fireBall/fireBallDrawer.cpp
		sources/contexts/gameCommon/stalactites/stalactitesData.cpp
		sources/contexts/gameCommon/stalactites/racketFreezesDurationsLoader.cpp
		sources/contexts/gameCommon/stalactites/stalactitesDrawer.cpp
		sources/contexts/gameCommon/stalactites/onePlayerStalactiteData.cpp
		sources/contexts/gameCommon/pinguins/pinguinBehaviorData.cpp
		sources/contexts/gameCommon/pinguins/pinguinDrawData.cpp
		sources/contexts/gameCommon/cheating/checkCheatingFile.cpp
		sources/contexts/gameCommon/rectCollisions/brickGridCollisions.cpp
		sources/contexts/gameCommon/rectCollisions/rectLoader.cpp
		sources/contexts/gameCommon/rectCollisions/processBouncing.cpp
		sources/contexts/gameCommon/rectCollisions/objMoveWithRectCollisions.cpp
		sources/contexts/gameCommon/rectCollisions/monsterCollisionsWithRect.cpp
		sources/contexts/gameCommon/pathsAndRects/pathZoneRects.cpp
		sources/contexts/gameCommon/pathsAndRects/pathNodes.cpp
		sources/contexts/gameCommon/halloween/pumpkins/pumpkinCombo.cpp
		sources/contexts/gameCommon/halloween/pumpkins/pumpkinDrawer.cpp
		sources/contexts/gameCommon/halloween/bat/badBatDrawer.cpp
		sources/contexts/gameCommon/halloween/bat/badBatData.cpp
		sources/contexts/gameCommon/halloween/bat/batFactory.cpp
		sources/contexts/gameCommon/explosions/explosionLoader.cpp
		sources/contexts/gameCommon/explosions/entityExplosion.cpp
		sources/contexts/gameCommon/explosions/allExplosions.cpp
		sources/contexts/onePlayerGame/inGameMainMenu/race/context.cpp
		sources/contexts/onePlayerGame/inGameMainMenu/race/graphicalInterface.cpp
		sources/contexts/onePlayerGame/inGameMainMenu/campaignChoice/context.cpp
		sources/contexts/onePlayerGame/inGameMainMenu/campaignChoice/raceLevelsCount.cpp
		sources/contexts/onePlayerGame/inGameMainMenu/campaignChoice/graphicalInterface.cpp
		sources/contexts/onePlayerGame/campaignEnd/campaignEndContext.cpp
		sources/contexts/onePlayerGame/campaignEnd/campEndInterface.cpp
		sources/contexts/onePlayerGame/bestScoresMenu/bestScoresData.cpp
		sources/contexts/onePlayerGame/bestScoresMenu/bestScoresContext.cpp
		sources/contexts/onePlayerGame/bestScoresMenu/mainInterface.cpp
		sources/contexts/onePlayerGame/levelEnd/completeLevelInterface.cpp
		sources/contexts/onePlayerGame/levelEnd/levelEndContext.cpp
		sources/contexts/onePlayerGame/gamePaused/gamePausedGUI.cpp
		sources/contexts/onePlayerGame/gamePaused/gameInPause.cpp
		sources/contexts/onePlayerGame/seeNextLevel/context.cpp
		sources/contexts/onePlayerGame/levelComponents/traceCross/traceCross.cpp
		sources/contexts/onePlayerGame/levelComponents/global/monstersTriggers.cpp
		sources/contexts/onePlayerGame/levelComponents/global/globalGameObject.cpp
		sources/contexts/onePlayerGame/levelComponents/bonusCoins/coinSample.cpp
		sources/contexts/onePlayerGame/levelComponents/freeFunctions/ballWithPinguinBrickCollisions.cpp
		sources/contexts/onePlayerGame/levelComponents/freeFunctions/testBallPositionWithGrid.cpp
		sources/contexts/onePlayerGame/levelComponents/freeFunctions/ballWithGridCollisions.cpp
		sources/contexts/onePlayerGame/levelComponents/freeFunctions/withSkullBrickBallCollision.cpp
		sources/contexts/onePlayerGame/levelComponents/freeFunctions/detectLevelEnd.cpp
		sources/contexts/onePlayerGame/levelComponents/fallingBonuses/fallingBonuses.cpp
		sources/contexts/onePlayerGame/levelComponents/onePlayerRacket/onePlayerRacket.cpp
		sources/contexts/onePlayerGame/levelComponents/antarcticEpisodeThings/antarcticPackage.cpp
		sources/contexts/onePlayerGame/levelComponents/antarcticEpisodeThings/stalactites/iceStalactites.cpp
		sources/contexts/onePlayerGame/levelComponents/antarcticEpisodeThings/onePlayerPinguins/onePlayerPinguin.cpp
		sources/contexts/onePlayerGame/levelComponents/rims/playerRims.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/hellSkullGlobal.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/inGame/hellSkullElement.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/inGame/hellSkullPack.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/inGame/hellSkullActivity.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/configuration/skullFileData.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellSkulls/configuration/hellSkullDataLoader.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/paths/fireBallPaths.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/fireBallGlobal.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/inGame/bottomScreenFireBallsPack.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/inGame/fireBallElement.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/configuration/fireBallFileData.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/fireBalls/configuration/fireBallDataLoader.cpp
		sources/contexts/onePlayerGame/levelComponents/hellEpisodeThings/hellPackage.cpp
		sources/contexts/onePlayerGame/levelComponents/infoBar/infoBar.cpp
		sources/contexts/onePlayerGame/levelComponents/balls/ballSpeedsOptions.cpp
		sources/contexts/onePlayerGame/levelComponents/balls/ballsThings.cpp
		sources/contexts/onePlayerGame/levelComponents/inGameBagThings/bagViewContext.cpp
		sources/contexts/onePlayerGame/levelComponents/inGameBagThings/bagObject.cpp
		sources/contexts/onePlayerGame/levelComponents/inGameBagThings/iconsPositionsLoader.cpp
		sources/contexts/onePlayerGame/levelComponents/inGameBagThings/bonusesCountGraphics.cpp
		sources/contexts/onePlayerGame/levelComponents/inputs/joystickInputData.cpp
		sources/contexts/onePlayerGame/levelComponents/inputs/userInputs.cpp
		sources/contexts/onePlayerGame/levelComponents/inputs/customInputsData.cpp
		sources/contexts/onePlayerGame/newGame/newGameInterface.cpp
		sources/contexts/onePlayerGame/newGame/newGameContext.cpp
		sources/contexts/onePlayerGame/inputConfig/context.cpp
		sources/contexts/onePlayerGame/inputConfig/inputThings.cpp
		sources/contexts/onePlayerGame/inputConfig/staticGraphics.cpp
		sources/contexts/onePlayerGame/saveAndLoad/common/slotGraphics.cpp
		sources/contexts/onePlayerGame/saveAndLoad/common/slotsUserInterface.cpp
		sources/contexts/onePlayerGame/saveAndLoad/gameSaving/saveGameContext.cpp
		sources/contexts/onePlayerGame/saveAndLoad/gameLoading/gameLoadContext.cpp
		sources/contexts/onePlayerGame/skillLevelChoice/context.cpp
		sources/contexts/onePlayerGame/skillLevelChoice/graphicalInterface.cpp
		sources/contexts/onePlayerGame/levelsContexts/stdLevelContext.cpp
		sources/contexts/onePlayerGame/levelsContexts/antarcticContext.cpp
		sources/contexts/onePlayerGame/levelsContexts/hellContext.cpp
		sources/contexts/onePlayerGame/bonusesShop/shopContext.cpp
		sources/contexts/onePlayerGame/bonusesShop/shopInterface.cpp
)

add_executable(	${PROJECT_NAME} 
				WIN32
				${SOURCES} 
				${HEADERS} 
				${INC_DIRS}
)

target_include_directories(	${PROJECT_NAME}
							PRIVATE ${SDL2_INCLUDE_DIRS}
							PRIVATE ${SDL2_IMAGE_INCLUDE_DIRS}
							PRIVATE ${SDL2_TTF_INCLUDE_DIRS}
							PRIVATE ${SDL2_MIXER_INCLUDE_DIRS}
							PRIVATE sources
							PRIVATE ../../libs/genericLib/sources
							PRIVATE ../../libs/spriteMoveLib/sources
							PRIVATE ../../libs/sdl2_wrapper/sources
							PRIVATE ../../libs/commonFiles/sources
							PRIVATE ../../libs/gameSaveAndLoad/sources
							PRIVATE ../../libs/consts/sources
)

target_link_libraries(	${PROJECT_NAME} 
						${SDL2_LIBRARIES} 
						${SDL2_IMAGE_LIBRARIES} 
						${SDL2_TTF_LIBRARIES} 
						${SDL2_MIXER_LIBRARIES}
						genericLib
						spriteMoveLib
						sdl2_wrapper
						commonFiles
						gameSaveAndLoad
)

set_target_properties(	${PROJECT_NAME} 
						PROPERTIES 
						CXX_STANDARD 20
						CXX_STANDARD_REQUIRED YES 
						CXX_EXTENSIONS NO 
						LINKER_LANGUAGE CXX
)
